[package]
name = "captur"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

screenshots = "0.8"
chrono = "0.4"
anyhow = "1"

s3s = "0.11"
s3s-fs = "0.11"

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

tracing-subscriber = "0.3"